syntax = "proto3";

package com.road.yishi.proto.building;

message BuildOrderList {
  repeated int32 buildOrder = 1;
}
