syntax = "proto3";

package com.road.yishi.proto.building;

message BuildingInfoListMsg {
  bool result = 1;
  repeated int32 building = 2;
}
