syntax = "proto3";

package com.road.yishi.proto.room;

message RoomPlayerMsg {
  int32 roomId = 1;
  int32 count = 2;
  int32 currentRoomIndex = 3;
  int32 playerState = 4;
  int32 heroId = 5;
  int32 playerId = 6;
  int32 grades = 7;
  string nickName = 8;
  int32 sex = 9;
  int32 templateId = 10;
  string arm = 11;
  string cloth = 12;
  int32 armyId = 13;
  int32 fightingCapacity = 14;
  int32 curPosX = 15;
  int32 curPosY = 16;
  int32 campaignId = 17;
  bool onlineState = 18;
  int32 consortiaId = 19;
  string consortiaName = 20;
  int32 changeShapeId = 21;
  int32 armyState = 22;
  int32 teamId = 23;
  int32 bufferTempId = 24;
  int32 geste = 25;
  int32 headId = 26;
  bool isVip = 27;
  int32 vipType = 28;
  int32 mountTempId = 29;
  int32 mountGrade = 30;
  string wing = 31;
  string serverName = 32;
  string hat = 33;
  string fashionArm = 34;
  string fashionCloth = 35;
  bool hide = 36;
  int32 appellid = 37;
  int32 vehicleTemplateId = 38;
  string fateSkills = 39;
  int32 petTemplateId = 40;
  int32 petQuqlity = 41;
  string petName = 42;
  bool isNoGet = 43;
  int32 job = 44;
  int32 vipGrade = 45;
  int32 mulSportScore = 46;
  int32 segmentId = 47;
  int32 hp = 48;
  int32 maxHp = 49;
  int32 frameId = 50;
  bool isReturnedPlayer = 51;
  int32 mountStatus = 52;
  repeated int32 tarIds = 53;
}
